Several small bug fixes.
DispalyUtil  - NPE fix.
MobSpawnHandler - Proper value passing for level grabbing.
 SkillAPIExperienceHandler - updated to newest SkillAPI api.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: ConquestiaMobs
 main: com.conquestia.mobs.ConquestiaMobs
-version: 2.1.3b
+version: 2.1.5b
 author: Ultiferrago
-soft-depend: [Vault, HolographicDisplays, MobArena]
+soft-depend: [Vault, HolographicDisplays, MobArena, Heroes, SkillAPI]
 
 commands:
    cqm:
